<resources>
    <string name="app_name">Anime Song Guess</string>
    <string name="shop_title">Shop</string>
    <string name="anime_coin_balance">Anime Coin: %1$d</string>
    <string name="anime_coin_price">Price: %1$d Anime Coin</string>
    <string name="not_enough_anime_coin">Not enough Anime Coin to buy this cart.</string>
    <string name="purchase_complete">Purchase complete: %1$d Anime Coin spent.</string>
    <string name="cart_count">Cart (%1$d)</string>
    <string name="cart_title">Cart</string>
    <string name="cart_item_quantity">Quantity: %1$d</string>
    <string name="cart_total">Total: %1$d Anime Coin</string>
    <string name="remove">Remove</string>
    <string name="close">Close</string>
    <string name="empty_cart">Your cart is empty.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="open_item_details">Open %1$s details</string>
    <string name="added_to_cart">%1$s added to cart</string>

    <string name="sign_in_title">Welcome back</string>
    <string name="sign_in_subtitle">Ready to guess the next anime tune?</string>
    <string name="sign_in_prompt">Sign in to continue your streak</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot?</string>
    <string name="sign_in_button">Sign in</string>
    <string name="no_account_prompt">Don’t have an account?</string>
    <string name="sign_up_text">Create one</string>
    <string name="sound_test">Sound Test</string>
    <string name="searchSong">Enter an anime theme</string>
    <string name="profile_header">Profile</string>
    <string name="sign_up_title">Create account</string>
    <string name="sign_up_subtitle">Start your anime music challenge.</string>
    <string name="sign_up_prompt">Join now and track your score</string>
    <string name="full_name_label">Full name</string>
    <string name="confirm_password_label">Confirm password</string>
    <string name="sign_up_button">Sign up</string>
    <string name="already_have_account_prompt">Already have an account?</string>
    <string name="sign_in_text">Sign in</string>
    <string name="title_one">Welcome to</string>
    <string name="playGame">Play</string>
    <string name="viewProfile">Profile</string>
    <string name="connectToMAL">Connect to MAL</string>
    <string name="logout">Log Out</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="back_button">Back</string>
</resources>

